--- a/config/content.htm
+++ b/config/content.htm
@@ -5,8 +5,7 @@
 <h1>組員名單</h1>
 <p>group1</p>
 <p><br/><a href="https://s40723224.github.io/cad2020">40723224</a><span> 范誠宇</span><br/><a href="https://40823204.github.io/cad2020">40823204</a><span> 賴惟嘉</span><br/><a href="https://40823212.github.io/cad2020">40823212</a><span> 陳逸翔</span><br/><a href="https://40823215.github.io/cad2020">40823215</a><span> 謝閎璾</span><br/><a href="https://40823219.github.io/cad2020">40823219</a><span> 廖顯紘</span><br/><a href="https://40823225.github.io/cad2020">40823225</a><span> 徐誠隆 </span><br/><a href="https://40823226.github.io/cad2020">40823226</a><span> 蘇柏瑋 </span><br/><a href="https://40823234.github.io/cad2020">40823234</a><span> 游子毅</span><br/><a href="https://40823250.github.io/cad2020">40823250</a><span> 張哲瑀</span><br/><a href="https://40823251.github.io/cad2020">40823251</a><span> 林進益</span><br/><a href="https://40832244.github.io/cad2020">40832244</a> 林晉廷</p><h1>個人進度</h1>
-<p>我要努力跟上進度呀!</p>
-<h2>w1-w3</h2>
+<p>我要努力跟上進度呀 !</p><h2>w1-w3</h2>
 <p></p>
 <p>第一張<br/><img alt="" height="151" src="/images/製圖_201016_0.jpg" width="186"/></p>
 <p>第二張</p>
@@ -138,8 +137,9 @@
 <h2>下載內容</h2>
 <p><a href="https://drive.google.com/file/d/1fKXXLc2P7hQb3spsmD1HM9Uljy3gvcMc/view">下載fall2020</a></p>
 <p><a href="https://drive.google.com/drive/folders/1LO3o1OpR0KF4SxDScOSa9EQNa_kGsFzs">課程影片連結</a></p>
-<p><a href="https://git-scm.com/download/win">下載portable git </a> <span> </span><span>→   點選<strong><a href="https://github.com/git-for-windows/git/releases/download/v2.30.0.windows.2/PortableGit-2.30.0.2-64-bit.7z.exe">64-bit Git for Windows Portable</a>. </strong></span></p>
-<h2>指令</h2>
+<p><a href="https://git-scm.com/download/win">下載portable git </a> <span> </span><span>→   點選<strong><a href="https://github.com/git-for-windows/git/releases/download/v2.30.0.windows.2/PortableGit-2.30.0.2-64-bit.7z.exe">64-bit Git for Windows Portable</a><br/></strong></span></p>
+<p><a href="https://www.python.org/downloads/">下載python</a> <span>→ 至python官網下載python3.8.2安裝包 → 執行後點選Modify → 關閉pip選項 → 到白窗更改路徑 → 到黑窗執行get pip.py下載pip軟件(pip install </span><span>Flask</span>、<span>Markdown</span>、<span>lxml</span>、<span>bs4</span>、<span>flask_cors</span>、<span>pelican</span>、<span>leo</span><span>) → 完成 !</span></p>
+<p><span><img alt="" height="125" src="/images/擷取111.png" width="200"/><img alt="" height="125" src="/images/螢幕擷取畫面 2020-12-29 233309.jpg" width="200"/><img alt="" height="125" src="/images/擷取2222.PNG" width="200"/></span></p><h2>指令</h2>
 <p>得到9443網址:</p>
 <p>開啟fall2020<span>→開啟</span>start.bat</p>
 <p>cd tmp/cad2020/cmsimde(進入資料夾)</p>
