--- a/content/個人進度.html
+++ b/content/個人進度.html
@@ -134,8 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">組員名單 << <a href='組員名單.html'>Previous</a> <a href='w1-w3.html'>Next</a> >> w1-w3<br /><h1>個人進度</h1>
-<p>我要努力跟上進度呀!</p>
-<br />組員名單 << <a href='組員名單.html'>Previous</a> <a href='w1-w3.html'>Next</a> >> w1-w3</div>
+<p>我要努力跟上進度呀 !</p><br />組員名單 << <a href='組員名單.html'>Previous</a> <a href='w1-w3.html'>Next</a> >> w1-w3</div>
         
     <!-- footer -->
       <div class="container">
