--- a/config/content.htm
+++ b/config/content.htm
@@ -51,12 +51,11 @@
 <p><img alt="" height="164" src="/images/製圖_201016_50.jpg" width="389"/></p>
 <p>組合圖</p>
 <p><img alt="" height="478" src="/images/製圖_201016_10.jpg" width="266"/></p>
-<h3>HW1</h3>
+<h3>HW1-零件表</h3>
 <p>練習1:<a href="http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%921.pdf">PDF.1</a></p>
 <p>練習2:<a href="http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%922.pdf">PDF.2</a></p>
 <p>零件圖</p>
-<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
-<h2>w4-w6</h2>
+<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p><h2>w4-w6</h2>
 <h4><span>Solidworks2017使用10mm繪製</span></h4>
 <p></p>
 <p>製圖影片</p>
