--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -137,8 +137,9 @@
 <h2>下載內容</h2>
 <p><a href="https://drive.google.com/file/d/1fKXXLc2P7hQb3spsmD1HM9Uljy3gvcMc/view">下載fall2020</a></p>
 <p><a href="https://drive.google.com/drive/folders/1LO3o1OpR0KF4SxDScOSa9EQNa_kGsFzs">課程影片連結</a></p>
-<p><a href="https://git-scm.com/download/win">下載portable git </a> <span> </span><span>→   點選<strong><a href="https://github.com/git-for-windows/git/releases/download/v2.30.0.windows.2/PortableGit-2.30.0.2-64-bit.7z.exe">64-bit Git for Windows Portable</a>. </strong></span></p>
-<h2>指令</h2>
+<p><a href="https://git-scm.com/download/win">下載portable git </a> <span> </span><span>→   點選<strong><a href="https://github.com/git-for-windows/git/releases/download/v2.30.0.windows.2/PortableGit-2.30.0.2-64-bit.7z.exe">64-bit Git for Windows Portable</a><br/></strong></span></p>
+<p><a href="https://www.python.org/downloads/">下載python</a> <span>→ 至python官網下載python3.8.2安裝包 → 執行後點選Modify → 關閉pip選項 → 到白窗更改路徑 → 到黑窗執行get pip.py下載pip軟件(pip install </span><span>Flask</span>、<span>Markdown</span>、<span>lxml</span>、<span>bs4</span>、<span>flask_cors</span>、<span>pelican</span>、<span>leo</span><span>) → 完成 !</span></p>
+<p><span><img alt="" height="125" src="/images/擷取111.png" width="200"/><img alt="" height="125" src="/images/螢幕擷取畫面 2020-12-29 233309.jpg" width="200"/><img alt="" height="125" src="/images/擷取2222.PNG" width="200"/></span></p><h2>指令</h2>
 <p>得到9443網址:</p>
 <p>開啟fall2020<span>→開啟</span>start.bat</p>
 <p>cd tmp/cad2020/cmsimde(進入資料夾)</p>
