--- a/content/w4-w6.html
+++ b/content/w4-w6.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='個人進度.html'>個人進度</a><ul class='dropdown'><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a><li><a href='w8-w17.html'>w8-w17</a><li><a href='W18.html'>W18</a></li></ul><li class='has-children'><a href='小組討論.html'>小組討論</a><ul class='dropdown'><li><a href='小組作業.html'>小組作業</a><li><a href='測試模擬.html'>測試模擬</a></li></ul><li class='has-children'><a href='課程筆記.html'>課程筆記</a><ul class='dropdown'><li><a href='下載內容.html'>下載內容</a><li><a href='指令.html'>指令</a><li><a href='遇到問題.html'>遇到問題</a></li>
+                     <li><a href='About.html'>About</a><li><a href='組員名單.html'>組員名單</a><li class='has-children'><a href='個人進度.html'>個人進度</a><ul class='dropdown'><li><a href='w1-w3.html'>w1-w3</a><li class='has-children'><a href='w3.html'>w3</a><ul class='dropdown'><li><a href='HW1-零件表.html'>HW1-零件表</a></li></ul><li><a href='w4-w6.html'>w4-w6</a><li><a href='w7.html'>w7</a><li><a href='w8-w17.html'>w8-w17</a><li><a href='W18.html'>W18</a></li></ul><li class='has-children'><a href='小組討論.html'>小組討論</a><ul class='dropdown'><li><a href='小組作業.html'>小組作業</a><li><a href='測試模擬.html'>測試模擬</a></li></ul><li class='has-children'><a href='課程筆記.html'>課程筆記</a><ul class='dropdown'><li><a href='下載內容.html'>下載內容</a><li><a href='指令.html'>指令</a><li><a href='遇到問題.html'>遇到問題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w4-w6</h1>
+    <div id="tipue_search_content">HW1-零件表 << <a href='HW1-零件表.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w4-w6</h1>
 <h4><span>Solidworks2017使用10mm繪製</span></h4>
 <p></p>
 <p>製圖影片</p>
@@ -142,7 +142,7 @@ img.add_border {
 <p></p>
 <p><img alt="" height="303" src="./../images/擷取2.PNG" width="401"/></p>
 <p></p>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
+<br />HW1-零件表 << <a href='HW1-零件表.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
         
     <!-- footer -->
       <div class="container">
