--- a/content/HW1-零件表.html
+++ b/content/HW1-零件表.html
@@ -137,7 +137,8 @@ img.add_border {
 <p>練習1:<a href="http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%921.pdf">PDF.1</a></p>
 <p>練習2:<a href="http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%922.pdf">PDF.2</a></p>
 <p>零件圖</p>
-<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p><br />w3 << <a href='w3.html'>Previous</a> <a href='w4-w6.html'>Next</a> >> w4-w6</div>
+<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='w4-w6.html'>Next</a> >> w4-w6</div>
         
     <!-- footer -->
       <div class="container">
