--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -4,8 +4,10 @@
 <h5>小組網站:<a href="http://40823251.github.io/cad2020bg1">http://40823251.github.io/cad2020bg1</a></h5>
 <h1>組員名單</h1>
 <p>group1</p>
-<p><br/><a href="https://s40723224.github.io/cad2020">40723224</a><span> 范誠宇</span><br/><a href="https://40823204.github.io/cad2020">40823204</a><span> 賴惟嘉</span><br/><a href="https://40823212.github.io/cad2020">40823212</a><span> 陳逸翔</span><br/><a href="https://40823215.github.io/cad2020">40823215</a><span> 謝閎璾</span><br/><a href="https://40823219.github.io/cad2020">40823219</a><span> 廖顯紘</span><br/><a href="https://40823225.github.io/cad2020">40823225</a><span> 徐誠隆 </span><br/><a href="https://40823226.github.io/cad2020">40823226</a><span> 蘇柏瑋 </span><br/><a href="https://40823234.github.io/cad2020">40823234</a><span> 游子毅</span><br/><a href="https://40823250.github.io/cad2020">40823250</a><span> 張哲瑀</span><br/><a href="https://40823251.github.io/cad2020">40823251</a><span> 林進益</span><br/><a href="https://40832244.github.io/cad2020">40832244</a> 林晉廷</p><h1>個人進度</h1>
-<p>我要努力跟上進度呀 !</p><h2>w1-w3</h2>
+<p><br/><a href="https://s40723224.github.io/cad2020">40723224</a><span> 范誠宇</span><br/><a href="https://40823204.github.io/cad2020">40823204</a><span> 賴惟嘉</span><br/><a href="https://40823212.github.io/cad2020">40823212</a><span> 陳逸翔</span><br/><a href="https://40823215.github.io/cad2020">40823215</a><span> 謝閎璾</span><br/><a href="https://40823219.github.io/cad2020">40823219</a><span> 廖顯紘</span><br/><a href="https://40823225.github.io/cad2020">40823225</a><span> 徐誠隆 </span><br/><a href="https://40823226.github.io/cad2020">40823226</a><span> 蘇柏瑋 </span><br/><a href="https://40823234.github.io/cad2020">40823234</a><span> 游子毅</span><br/><a href="https://40823250.github.io/cad2020">40823250</a><span> 張哲瑀</span><br/><a href="https://40823251.github.io/cad2020">40823251</a><span> 林進益</span><br/><a href="https://40832244.github.io/cad2020">40832244</a> 林晉廷</p>
+<h1>個人進度</h1>
+<p>我要努力跟上進度呀 !</p>
+<h2>w1-w3</h2>
 <p></p>
 <p>第一張<br/><img alt="" height="151" src="/images/製圖_201016_0.jpg" width="186"/></p>
 <p>第二張</p>
@@ -55,7 +57,8 @@
 <p>練習1:<a href="http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%921.pdf">PDF.1</a></p>
 <p>練習2:<a href="http://mde.tw/cad2020/downloads/Solidworks%20%E9%9B%B6%E4%BB%B6%E7%B9%AA%E5%9C%96%E7%B7%B4%E7%BF%922.pdf">PDF.2</a></p>
 <p>零件圖</p>
-<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p><h2>w4-w6</h2>
+<p><iframe height="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQS7OXi7KxNdLOO_m-Ifm4_HY4EWWOnzwA8p8lLgdo1wX3J1z2i5fR2rVZeh8si7voCAf9i9kT0F4iE/pubhtml?widget=true&amp;headers=false" width="1000"></iframe></p>
+<h2>w4-w6</h2>
 <h4><span>Solidworks2017使用10mm繪製</span></h4>
 <p></p>
 <p>製圖影片</p>
@@ -120,7 +123,8 @@
 <p><strong><img alt="" height="214" src="/images/003.png" width="451"/></strong></p>
 <h2>W18</h2>
 <p><strong>40832244心得:</strong></p>
-<p><b>感覺才剛轉進來這個班，馬上的一個學期就結束了。由於沒有學過大一的課程內容，所以使我開學過了很久才開始跟上同學的腳步。從一開始沒有網頁，沒有FALL2020等，到現在能有一個有內容的網站，使我學了不少東西。雖然很多時候真得是得靠同學完成的，大部分都看得不是很懂，但我有跟在旁邊一起做，多少有學會了點新知識。到了下半學期的的課程是小組作業，我的貢獻不多，因為我前半學期的作業都還沒跟上。自己作業跟上進度之後才有比較大的付出在小組作業上。希望我在下學期的課程能學習得更快，更融入大家的學習。</b></p><h1>小組討論</h1>
+<p><b>感覺才剛轉進來這個班，馬上的一個學期就結束了。由於沒有學過大一的課程內容，所以使我開學過了很久才開始跟上同學的腳步。從一開始沒有網頁，沒有FALL2020等，到現在能有一個有內容的網站，使我學了不少東西。雖然很多時候真得是得靠同學完成的，大部分都看得不是很懂，但我有跟在旁邊一起做，多少有學會了點新知識。到了下半學期的的課程是小組作業，我的貢獻不多，因為我前半學期的作業都還沒跟上。自己作業跟上進度之後才有比較大的付出在小組作業上。希望我在下學期的課程能學習得更快，更融入大家的學習。</b></p>
+<h1>小組討論</h1>
 <p>大家一起討論機構或軟體的內容。</p>
 <h2>小組作業</h2>
 <p><span>零件圖檔下載:</span><a href="https://40823234.github.io/cad2020/images/1610096847175.jpg">bg1圖檔.zip</a></p>
@@ -136,12 +140,16 @@
 <h2>下載內容</h2>
 <p><a href="https://drive.google.com/file/d/1fKXXLc2P7hQb3spsmD1HM9Uljy3gvcMc/view">下載fall2020</a></p>
 <p>-------------------------------------------------------------------------------------------------------</p>
+<p>-------------------------------------------------------------------------------------------------------</p>
 <p><a href="https://drive.google.com/drive/folders/1LO3o1OpR0KF4SxDScOSa9EQNa_kGsFzs">課程影片連結</a></p>
-<p><span>-------------------------------------------------------------------------------------------------------</span></p>
+<p>-------------------------------------------------------------------------------------------------------</p>
+<p>-------------------------------------------------------------------------------------------------------</p>
 <p><a href="https://git-scm.com/download/win">下載portable git </a> <span> </span><span>→   點選<strong><a href="https://github.com/git-for-windows/git/releases/download/v2.30.0.windows.2/PortableGit-2.30.0.2-64-bit.7z.exe">64-bit Git for Windows Portable</a><br/></strong></span></p>
-<p><span><strong>-------------------------------------------------------------------------------------------------</strong></span></p>
+<p>-------------------------------------------------------------------------------------------------------</p>
+<p>-------------------------------------------------------------------------------------------------------</p>
 <p><a href="https://www.python.org/downloads/">下載python</a> <span>→ 至python官網下載python3.8.2安裝包 → 執行後點選Modify → 關閉pip選項 → 到白窗更改路徑 → 到黑窗執行get pip.py下載pip軟件(pip install </span><span>Flask</span>、<span>Markdown</span>、<span>lxml</span>、<span>bs4</span>、<span>flask_cors</span>、<span>pelican</span>、<span>leo</span><span>) → 完成 !</span></p>
-<p><span><img alt="" height="250" src="/images/擷取111.png" width="400"/><img alt="" height="250" src="/images/螢幕擷取畫面 2020-12-29 233309.jpg" width="400"/><img alt="" height="250" src="/images/擷取2222.PNG" width="400"/></span></p><h2>指令</h2>
+<p><span><img alt="" height="250" src="/images/擷取111.png" width="400"/><img alt="" height="250" src="/images/螢幕擷取畫面 2020-12-29 233309.jpg" width="400"/><img alt="" height="250" src="/images/擷取2222.PNG" width="400"/></span></p>
+<h2>指令</h2>
 <p>得到9443網址:</p>
 <p>開啟fall2020<span>→開啟</span>start.bat</p>
 <p>cd tmp/cad2020/cmsimde(進入資料夾)</p>
