--- a/config/content.htm
+++ b/config/content.htm
@@ -147,13 +147,17 @@
 <p><a href="https://www.python.org/downloads/">下載python</a> <span>→ 至python官網下載python3.8.2安裝包 → 執行後點選Modify → 關閉pip選項 → 到白窗更改路徑 → 到黑窗執行get pip.py下載pip軟件(pip install </span><span>Flask</span>、<span>Markdown</span>、<span>lxml</span>、<span>bs4</span>、<span>flask_cors</span>、<span>pelican</span>、<span>leo</span><span>) → 完成 !</span></p>
 <p><span><img alt="" height="250" src="/images/擷取111.png" width="400"/><img alt="" height="250" src="/images/螢幕擷取畫面 2020-12-29 233309.jpg" width="400"/><img alt="" height="250" src="/images/擷取2222.PNG" width="400"/></span></p><h2>指令</h2>
 <p>得到9443網址:</p>
-<p>開啟fall2020<span>→開啟</span>start.bat</p>
+<p>開啟fall2020 <span>→ 開啟</span>start.bat</p>
 <p>cd tmp/cad2020/cmsimde(進入資料夾)</p>
 <p>python wsgi.py(使用python執行wsgi.py檔)</p>
-<p>→得到網址( https://127.0.0.1:9443/ )</p>
+<p>→ 得到網址( https://127.0.0.1:9443/ )</p>
+<p></p>
 <p>網站密碼:admin</p>
 <p></p>
-<h2>遇到問題</h2>
+<p>upload 網站內容:</p>
+<p><span>開啟</span><span>start.bat → cd tmp/cad2020(進入資料夾)</span></p>
+<p><span>git add . → git commit -m"名稱" → git push → 輸入學號及密碼</span></p>
+<p><span>→ 完成上傳 !</span></p><h2>遇到問題</h2>
 <p>換電腦後無法執行指令</p>
 <p>解決辦法:從新pip install <span>→  載起始檔  pip install flask flask_cors lxml bs4 markdown pelican leo <span>→ 改 star路徑  <span>→<span> 到黑窗執行 git push -F  <span>→<span> 改.git 裡面的cinfig的學號改成正確的  <span>→<span>  完成!</span></span></span></span></span></span></span></span></p>
 <p><span><span> <span> </span></span><span>  </span></span></p>
