--- a/content/指令.html
+++ b/content/指令.html
@@ -139,13 +139,14 @@ img.add_border {
 <p>cd tmp/cad2020/cmsimde(進入資料夾)</p>
 <p>python wsgi.py(使用python執行wsgi.py檔)</p>
 <p>→ 得到網址( https://127.0.0.1:9443/ )</p>
-<p></p>
+<p><span>-------------------------------------------------------------------------------------------------------</span></p>
 <p>網站密碼:admin</p>
-<p></p>
+<p><span>-------------------------------------------------------------------------------------------------------</span></p>
 <p>upload 網站內容:</p>
 <p><span>開啟</span><span>start.bat → cd tmp/cad2020(進入資料夾)</span></p>
 <p><span>git add . → git commit -m"名稱" → git push → 輸入學號及密碼</span></p>
-<p><span>→ 完成上傳 !</span></p><br />下載內容 << <a href='下載內容.html'>Previous</a> <a href='遇到問題.html'>Next</a> >> 遇到問題</div>
+<p><span>→ 完成上傳 !</span></p>
+<br />下載內容 << <a href='下載內容.html'>Previous</a> <a href='遇到問題.html'>Next</a> >> 遇到問題</div>
         
     <!-- footer -->
       <div class="container">
