--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2,6 +2,9 @@
 <h5>我的倉儲:<a href="https://github.com/40832244">https://github.com/40832244</a></h5>
 <h5>課程網站:<a href="http://mde.tw/cad2020/content/index.html">http://mde.tw/cad2020/content/index.html</a></h5>
 <h5>小組網站:<a href="http://40823251.github.io/cad2020bg1">http://40823251.github.io/cad2020bg1</a></h5>
+<p></p>
+<p></p>
+<p><img alt="" height="257" src="/images/下載.png" width="311"/></p>
 <h1>組員名單</h1>
 <p>group1</p>
 <p><br/><a href="https://s40723224.github.io/cad2020">40723224</a><span> 范誠宇</span><br/><a href="https://40823204.github.io/cad2020">40823204</a><span> 賴惟嘉</span><br/><a href="https://40823212.github.io/cad2020">40823212</a><span> 陳逸翔</span><br/><a href="https://40823215.github.io/cad2020">40823215</a><span> 謝閎璾</span><br/><a href="https://40823219.github.io/cad2020">40823219</a><span> 廖顯紘</span><br/><a href="https://40823225.github.io/cad2020">40823225</a><span> 徐誠隆 </span><br/><a href="https://40823226.github.io/cad2020">40823226</a><span> 蘇柏瑋 </span><br/><a href="https://40823234.github.io/cad2020">40823234</a><span> 游子毅</span><br/><a href="https://40823250.github.io/cad2020">40823250</a><span> 張哲瑀</span><br/><a href="https://40823251.github.io/cad2020">40823251</a><span> 林進益</span><br/><a href="https://40832244.github.io/cad2020">40832244</a> 林晉廷</p>
@@ -123,7 +126,7 @@
 <p><strong><img alt="" height="214" src="/images/003.png" width="451"/></strong></p>
 <h2>W18</h2>
 <p><strong>40832244心得:</strong></p>
-<p><b>感覺才剛轉進來這個班，馬上的一個學期就結束了。由於沒有學過大一的課程內容，所以使我開學過了很久才開始跟上同學的腳步。從一開始沒有網頁，沒有FALL2020等，到現在能有一個有內容的網站，使我學了不少東西。雖然很多時候真得是得靠同學完成的，大部分都看得不是很懂，但我有跟在旁邊一起做，多少有學會了點新知識。到了下半學期的的課程是小組作業，我的貢獻不多，因為我前半學期的作業都還沒跟上。自己作業跟上進度之後才有比較大的付出在小組作業上。希望我在下學期的課程能學習得更快，更融入大家的學習。</b></p>
+<p><b>感覺才剛進來這個班，馬上的半個學期就過去了。由於沒有學過大一的課程內容，所以使我開學過了很久才開始跟上同學的腳步。從一開始沒有網頁，沒有FALL2020等，到現在能有一個有內容的網站，使我學了不少東西。雖然很多時候真得是得靠同學完成的，大部分都看得不是很懂，但我有跟在旁邊一起做，多少有學會了點新知識。到了下半學期的的課程是小組作業，我的貢獻不多，因為我前半學期的作業都還沒跟上。自己作業跟上進度之後才有比較大的付出在小組作業上。希望我在下學期的課程能學習得更快，更融入大家的學習。</b></p>
 <h1>小組討論</h1>
 <p>大家一起討論機構或軟體的內容。</p>
 <h2>小組作業</h2>
@@ -145,23 +148,26 @@
 <p><a href="https://git-scm.com/download/win">下載portable git </a> <span> </span><span>→   點選<strong><a href="https://github.com/git-for-windows/git/releases/download/v2.30.0.windows.2/PortableGit-2.30.0.2-64-bit.7z.exe">64-bit Git for Windows Portable</a><br/></strong></span></p>
 <p>-------------------------------------------------------------------------------------------------------</p>
 <p><a href="https://www.python.org/downloads/">下載python</a> <span>→ 至python官網下載python3.8.2安裝包 → 執行後點選Modify → 關閉pip選項 → 到白窗更改路徑 → 到黑窗執行get pip.py下載pip軟件(pip install </span><span>Flask</span>、<span>Markdown</span>、<span>lxml</span>、<span>bs4</span>、<span>flask_cors</span>、<span>pelican</span>、<span>leo</span><span>) → 完成 !</span></p>
-<p><span><img alt="" height="250" src="/images/擷取111.png" width="400"/><img alt="" height="250" src="/images/螢幕擷取畫面 2020-12-29 233309.jpg" width="400"/><img alt="" height="250" src="/images/擷取2222.PNG" width="400"/></span></p><h2>指令</h2>
+<p><span><img alt="" height="250" src="/images/擷取111.png" width="400"/><img alt="" height="250" src="/images/螢幕擷取畫面 2020-12-29 233309.jpg" width="400"/><img alt="" height="250" src="/images/擷取2222.PNG" width="400"/></span></p>
+<h2>指令</h2>
 <p>得到9443網址:</p>
-<p>開啟fall2020<span>→開啟</span>start.bat</p>
+<p>開啟fall2020 <span>→ 開啟</span>start.bat</p>
 <p>cd tmp/cad2020/cmsimde(進入資料夾)</p>
 <p>python wsgi.py(使用python執行wsgi.py檔)</p>
-<p>→得到網址( https://127.0.0.1:9443/ )</p>
+<p>→ 得到網址( https://127.0.0.1:9443/ )</p>
+<p><span>-------------------------------------------------------------------------------------------------------</span></p>
 <p>網站密碼:admin</p>
-<p></p>
+<p><span>-------------------------------------------------------------------------------------------------------</span></p>
+<p>upload 網站內容:</p>
+<p><span>開啟</span><span>start.bat → cd tmp/cad2020(進入資料夾)</span></p>
+<p><span>git add . → git commit -m"名稱" → git push → 輸入學號及密碼</span></p>
+<p><span>→ 完成上傳 !</span></p>
 <h2>遇到問題</h2>
 <p>換電腦後無法執行指令</p>
-<p>解決辦法:從新pip install <span>→  載起始檔  pip install flask flask_cors lxml bs4 markdown pelican leo <span>→ 改 star路徑  <span>→<span> 到黑窗執行 git push -F  <span>→<span> 改.git 裡面的cinfig的學號改成正確的  <span>→<span>  完成!</span></span></span></span></span></span></span></span></p>
+<p>解決辦法:從新pip install <span>→  載起始檔  pip install flask flask_cors lxml bs4 markdown pelican leo <span>→ 改 star路徑  <span>→<span> 到黑窗執行 git push -F  <span>→<span> 改.git 裡面的cinfig的學號改成正確的  <span>→<span>  完成 !</span></span></span></span></span></span></span></span></p>
 <p><span><span> <span> </span></span><span>  </span></span></p>
 <p></p>
-<p>upload9443網站</p>
-<p>開啟<span>start.bat</span></p>
-<p><span>cd tmp/cad2020(進入資料夾)</span></p>
-<p>git add。 <span>→ git commit -m"名稱" → git push → (輸入帳號密碼) → 完成上傳</span></p>
+<p></p>
 <p><span></span></p>
 <p><span> </span></p>
 <p></p>
