--- a/content/About.html
+++ b/content/About.html
@@ -137,6 +137,9 @@ img.add_border {
 <h5>我的倉儲:<a href="https://github.com/40832244">https://github.com/40832244</a></h5>
 <h5>課程網站:<a href="http://mde.tw/cad2020/content/index.html">http://mde.tw/cad2020/content/index.html</a></h5>
 <h5>小組網站:<a href="http://40823251.github.io/cad2020bg1">http://40823251.github.io/cad2020bg1</a></h5>
+<p></p>
+<p></p>
+<p><img alt="" height="257" src="./../images/下載.png" width="311"/></p>
 <br /> <a href='組員名單.html'>Next</a> >> 組員名單</div>
         
     <!-- footer -->
