--- a/content/W18.html
+++ b/content/W18.html
@@ -135,7 +135,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w8-w17 << <a href='w8-w17.html'>Previous</a> <a href='小組討論.html'>Next</a> >> 小組討論<br /><h1>W18</h1>
 <p><strong>40832244心得:</strong></p>
-<p><b>感覺才剛轉進來這個班，馬上的一個學期就結束了。由於沒有學過大一的課程內容，所以使我開學過了很久才開始跟上同學的腳步。從一開始沒有網頁，沒有FALL2020等，到現在能有一個有內容的網站，使我學了不少東西。雖然很多時候真得是得靠同學完成的，大部分都看得不是很懂，但我有跟在旁邊一起做，多少有學會了點新知識。到了下半學期的的課程是小組作業，我的貢獻不多，因為我前半學期的作業都還沒跟上。自己作業跟上進度之後才有比較大的付出在小組作業上。希望我在下學期的課程能學習得更快，更融入大家的學習。</b></p>
+<p><b>感覺才剛進來這個班，馬上的半個學期就過去了。由於沒有學過大一的課程內容，所以使我開學過了很久才開始跟上同學的腳步。從一開始沒有網頁，沒有FALL2020等，到現在能有一個有內容的網站，使我學了不少東西。雖然很多時候真得是得靠同學完成的，大部分都看得不是很懂，但我有跟在旁邊一起做，多少有學會了點新知識。到了下半學期的的課程是小組作業，我的貢獻不多，因為我前半學期的作業都還沒跟上。自己作業跟上進度之後才有比較大的付出在小組作業上。希望我在下學期的課程能學習得更快，更融入大家的學習。</b></p>
 <br />w8-w17 << <a href='w8-w17.html'>Previous</a> <a href='小組討論.html'>Next</a> >> 小組討論</div>
         
     <!-- footer -->
