--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -124,6 +124,12 @@
 <p><strong><img alt="" height="217" src="/images/001.png" width="453"/></strong></p>
 <p><strong><img alt="" height="215" src="/images/002.png" width="453"/></strong></p>
 <p><strong><img alt="" height="214" src="/images/003.png" width="451"/></strong></p>
+<p><strong><span>-------------------------------------------------------------------------------------------------------</span></strong></p>
+<p><strong><span>小組機構測試模擬</span></strong></p>
+<p><strong><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/sIqYp1pKi5g" width="560"></iframe></span></strong></p>
+<p><span>零件圖檔下載:</span><a href="https://40823234.github.io/cad2020/images/1610096847175.jpg">bg1圖檔.zip</a></p>
+<p><span>繪製人員:40823204 賴惟嘉</span></p>
+<p><span><img alt="" height="380" src="/images/1610096847175.jpg" width="441"/></span></p>
 <h2>W18</h2>
 <p><strong>40832244心得:</strong></p>
 <p><b>感覺才剛進來這個班，馬上的半個學期就過去了。由於沒有學過大一的課程內容，所以使我開學過了很久才開始跟上同學的腳步。從一開始沒有網頁，沒有FALL2020等，到現在能有一個有內容的網站，使我學了不少東西。雖然很多時候真得是得靠同學完成的，大部分都看得不是很懂，但我有跟在旁邊一起做，多少有學會了點新知識。到了下半學期的的課程是小組作業，我的貢獻不多，因為我前半學期的作業都還沒跟上。自己作業跟上進度之後才有比較大的付出在小組作業上。希望我在下學期的課程能學習得更快，更融入大家的學習。</b></p>
