--- a/content/w8-w17.html
+++ b/content/w8-w17.html
@@ -145,8 +145,7 @@ img.add_border {
 <p><strong><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/sIqYp1pKi5g" width="560"></iframe></span></strong></p>
 <p><span>零件圖檔下載:</span><a href="https://40823234.github.io/cad2020/images/1610096847175.jpg">bg1圖檔.zip</a></p>
 <p><span>繪製人員:40823204 賴惟嘉</span></p>
-<p><span><img alt="" height="380" src="./../images/1610096847175.jpg" width="441"/></span></p>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
+<p><span><img alt="" height="380" src="./../images/1610096847175.jpg" width="441"/></span></p><br />w7 << <a href='w7.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
         
     <!-- footer -->
       <div class="container">
