--- a/content/w1-w3.html
+++ b/content/w1-w3.html
@@ -134,7 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">個人進度 << <a href='個人進度.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w1-w3</h1>
-<p></p>
+<p><a href="/">圖檔</a></p>
 <p>第一張<br/><img alt="" height="151" src="./../images/製圖_201016_0.jpg" width="186"/></p>
 <p>第二張</p>
 <p><img alt="" height="165" src="./../images/製圖_201016_1.jpg" width="187"/></p>
@@ -149,8 +149,7 @@ img.add_border {
 <p>第九張</p>
 <p><img alt="" height="185" src="./../images/製圖_201016_6.jpg" width="185"/></p>
 <p>第十張</p>
-<p><img alt="" height="170" src="./../images/製圖_201016_7.jpg" width="185"/></p>
-<br />個人進度 << <a href='個人進度.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
+<p><img alt="" height="170" src="./../images/製圖_201016_7.jpg" width="185"/></p><br />個人進度 << <a href='個人進度.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
