--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -11,7 +11,7 @@
 <h1>個人進度</h1>
 <p>我要努力跟上進度呀 !</p>
 <h2>w1-w3</h2>
-<p></p>
+<p><a href="https://drive.google.com/drive/folders/1epK8Xn-busxy18MNYo9xQHTvennmWqyo?usp=sharing">圖檔</a></p>
 <p>第一張<br/><img alt="" height="151" src="/images/製圖_201016_0.jpg" width="186"/></p>
 <p>第二張</p>
 <p><img alt="" height="165" src="/images/製圖_201016_1.jpg" width="187"/></p>
@@ -26,8 +26,7 @@
 <p>第九張</p>
 <p><img alt="" height="185" src="/images/製圖_201016_6.jpg" width="185"/></p>
 <p>第十張</p>
-<p><img alt="" height="170" src="/images/製圖_201016_7.jpg" width="185"/></p>
-<h2>w3</h2>
+<p><img alt="" height="170" src="/images/製圖_201016_7.jpg" width="185"/></p><h2>w3</h2>
 <p>第一張</p>
 <p><img alt="" height="172" src="/images/製圖_201016_8.jpg" width="207"/></p>
 <p>第二張</p>
