--- a/config/content.htm
+++ b/config/content.htm
@@ -11,7 +11,7 @@
 <h1>個人進度</h1>
 <p>我要努力跟上進度呀 !</p>
 <h2>w1-w3</h2>
-<p><a href="/">圖檔</a></p>
+<p><a href="https://drive.google.com/drive/folders/1epK8Xn-busxy18MNYo9xQHTvennmWqyo?usp=sharing">圖檔</a></p>
 <p>第一張<br/><img alt="" height="151" src="/images/製圖_201016_0.jpg" width="186"/></p>
 <p>第二張</p>
 <p><img alt="" height="165" src="/images/製圖_201016_1.jpg" width="187"/></p>
